[package]
name = "libpng-src"
version = "0.1.0"
authors = ["Alexandr Lambov <alex.lambov.md@gmail.com>"]
edition = "2021"
description = "Hepler package for compiling 'libpng' as a static library. Meant to be used as build dependency only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/alambov-md/libpng-src"
exclude = [
    ".gitignore",
    ".gitmodules",
    "libpng/.appveyor.yml",
    "libpng/.editorconfig",
    "libpng/.github/",
    "libpng/.gitignore",
    "libpng/.travis.yml",
    "libpng/.yamllint.yml",
    "libpng/ci/",
    "libpng/CMakeLists.txt",
    "libpng/config.h",
    "libpng/example/",
    "libpng/projects/",
]

[dev-dependencies]
rand = "0.8"